<resources>
    <string name="app_name">snapshot</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="msg_date_picker_range_error">Out of range</string>
</resources>